changed title but need to fix wrap

--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,18 @@ html body {
     text-align: center;
 }
 
+header h1 {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 50px ;
+    text-align: center;
+    text-size-adjust: auto;
+    color: skyblue;
+    font-weight: 900;
+    text-align: center;
+    display: block;
+    width: 100%;
+
+}
 
 .feature-container {
     flex: 2;
